# arabic-offline-summarizer

./: README.md  script.py
arabic_offline_summarizer/: .gitignore  README.md  pyproject.toml  requirements.txt  run_demo.py
arabic_offline_summarizer/data/samples/: create_samples.py
arabic_offline_summarizer/demo/: app.py
arabic_offline_summarizer/docs/: TECHNICAL_REPORT.md
arabic_offline_summarizer/scripts/: download_model.py  export_to_onnx.py
arabic_offline_summarizer/src/arabic_summarizer/: __init__.py  chunker.py  cli.py  config.py  core.py  evaluate.py  extractive.py  postprocessor.py  preprocessor.py
arabic_offline_summarizer/tests/: test_evaluate.py  test_integration.py  test_summarizer.py
