# pyproject.toml
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "arabic-offline-summarizer"
version = "2.0.0"
description = "Offline Arabic text summarization using AraT5v2 + ONNX"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "AOS Team" },
]
keywords = [
    "arabic", "nlp", "summarization", "offline",
    "text-summarization", "arabic-nlp", "transformers",
    "onnx", "arat5", "natural-language-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Arabic",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",
    "onnxruntime>=1.16.0",
    "optimum[onnxruntime]>=1.14.0",
    "pyarabic>=0.6.15",
    "gradio>=4.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "evaluate>=0.4.0",
    "rouge-score>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
gpu = [
    "onnxruntime-gpu>=1.16.0",
]
camel = [
    "camel-tools>=1.5.0",
]
all = [
    "arabic-offline-summarizer[dev,gpu,camel]",
]

[project.scripts]
aos-demo = "arabic_summarizer.cli:main_demo"
aos-summarize = "arabic_summarizer.cli:main_summarize"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# ─── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --timeout=120"
markers = [
    "slow: marks tests as slow (neural model required)",
    "offline: marks tests that work without internet",
    "integration: marks integration tests",
]

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/arabic_summarizer"]
omit = ["tests/*", "scripts/*", "demo/*"]

[tool.coverage.report]
show_missing = true
precision = 2

# ─── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '\.pyi?$'

# ─── isort ────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

# ─── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true